--- a/src/pages/home/components/sidebar/sidebar.css
+++ b/src/pages/home/components/sidebar/sidebar.css
@@ -1,4 +1,28 @@
+.sidebar {
+  height: 100vh;
+  padding: 30px 20px;
+  overflow-x: hidden;
+  background: #321e00;
+  width: 20vw;
+}
+
 .links {
   display: flex;
   flex-direction: column;
+}
+
+.sidebar a {
+  text-align: center;
+  margin-top: 30px;
+  padding: 10px 18px;
+  border: 2px solid #dead84;
+  border-radius: 10px;
+}
+
+.logo a {
+  border: none;
+}
+.logo a img {
+  width: 200px;
+  margin-bottom: 200px;
 }
