--- a/src/pages/home/components/nav/nav.css
+++ b/src/pages/home/components/nav/nav.css
@@ -20,10 +20,16 @@
 
 .navbar .address {
   margin-right: 20px;
+  margin-left: 20px;
+  color: #e2c2aa;
 }
 
 .navbar .profile a {
   padding: 5px 18px;
   border-radius: 100px;
   background-color: #ffffff;
+}
+
+.points {
+  color: #e2c2aa;
 }
